--- a/frontend/src/UI/Button.css
+++ b/frontend/src/UI/Button.css
@@ -38,9 +38,6 @@
   animation: fade-in 0.5s ease;
 }
 
-
-
-
 .tags-button {
   font-size: 1.5rem;
   font-weight: 700;
@@ -86,11 +83,11 @@
 @media (max-width: 1100px) {
   .tags-button {
     font-size: 13px !important;
-    padding: 7px;
+    padding: 12px;
   }
   .tags-button__clicked {
     font-size: 13px !important;
-    padding: 7px;
+    padding: 12px;
   }
   .container{
     padding-left: 15%;
